Configuracion del sistema diseño

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -8,6 +8,9 @@
     "/imgs/avatar.png": "/imgs/avatar.png",
     "/imgs/catalogue.png": "/imgs/catalogue.png",
     "/imgs/checklist.png": "/imgs/checklist.png",
+    "/imgs/circle_empty.png": "/imgs/circle_empty.png",
+    "/imgs/circle_full.png": "/imgs/circle_full.png",
+    "/imgs/circle_full_green.png": "/imgs/circle_full_green.png",
     "/imgs/documents.png": "/imgs/documents.png",
     "/imgs/fondo_direccion.jpg": "/imgs/fondo_direccion.jpg",
     "/imgs/fondo_login.jpg": "/imgs/fondo_login.jpg",
