--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -24,6 +24,7 @@
     "/imgs/pinmap.gif": "/imgs/pinmap.gif",
     "/imgs/product-development.png": "/imgs/product-development.png",
     "/imgs/teamwork.png": "/imgs/teamwork.png",
+    "/imgs/users/1701184355_NBURGOS.jpg": "/imgs/users/1701184355_NBURGOS.jpg",
     "/imgs/users/default.png": "/imgs/users/default.png",
     "/imgs/video-player.png": "/imgs/video-player.png",
     "/imgs/volume.png": "/imgs/volume.png",
@@ -97,6 +98,5 @@
     "/fonts/Poppins/Poppins-Thin.ttf": "/fonts/Poppins/Poppins-Thin.ttf",
     "/fonts/Poppins/Poppins-ThinItalic.ttf": "/fonts/Poppins/Poppins-ThinItalic.ttf",
     "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.ttf": "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.ttf",
-    "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.woff": "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.woff",
-    "/imgs/users/1701184355_NBURGOS.jpg": "/imgs/users/1701184355_NBURGOS.jpg"
+    "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.woff": "/fonts/vendor/element-ui/lib/theme-chalk/element-icons.woff"
 }
