--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -14,6 +14,7 @@
     "/imgs/documents.png": "/imgs/documents.png",
     "/imgs/fondo_direccion.jpg": "/imgs/fondo_direccion.jpg",
     "/imgs/fondo_login.jpg": "/imgs/fondo_login.jpg",
+    "/imgs/fondo_login.webp": "/imgs/fondo_login.webp",
     "/imgs/fondo_social.jpg": "/imgs/fondo_social.jpg",
     "/imgs/icon_inscripcion.png": "/imgs/icon_inscripcion.png",
     "/imgs/icon_recursos.png": "/imgs/icon_recursos.png",
