Corección Modulo Control: moras individual/Grupal + Modificacion Pantalla INicio + Modificación Monto Mora 30Bs por dia

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -6,6 +6,7 @@
     "/js/plantilla.js": "/js/plantilla.js",
     "/imgs/1700500875_logo.png": "/imgs/1700500875_logo.png",
     "/imgs/avatar.png": "/imgs/avatar.png",
+    "/imgs/cash_machine.png": "/imgs/cash_machine.png",
     "/imgs/catalogue.png": "/imgs/catalogue.png",
     "/imgs/checklist.png": "/imgs/checklist.png",
     "/imgs/circle_empty.png": "/imgs/circle_empty.png",
